fixed globalized overflow props🪄

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -347,7 +347,6 @@ html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
   background-color: rgb(var(--white));
 opacity: 1;
 background-image:  linear-gradient(rgb(var(--accent-600)) 1px, transparent 1px), linear-gradient(to right, rgb(var(--accent-600)) 1px,  rgb(var(--white)) 1px);
